--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: pip install nbconvert
       
       - name: Compile
-        run: ./create_html.sh
+        run: sudo bash create_html.sh
