--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,7 @@
 
 name: Compile HTML
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,6 +15,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Install jupyter
+        run: pip install jupyterlab
 
       - name: Install nbconvert
         run: pip install nbconvert
