--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install jupyter
-        run: pip install jupyterlab
+        run: sudo pip install jupyterlab
 
       - name: Install nbconvert
-        run: pip install nbconvert
+        run: sudo pip install nbconvert
       
       - name: Compile
         run: sudo bash create_html.sh
